--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 
-  <title>Minha - Página Dinâmica</title>
+  <title>TechWave</title>
 </head>
 
 <body>
